@@ -1,4 +1,3 @@
 * Improve color calibration
 * Fix vignette lens correction
 * Add fisheye lens correction
-* Add parallel conversion in case of multiple files (thread per CPU)
