@@ -1,3 +1,4 @@
+* Added parallel processing
 * Added smallest FOV resulution to SJ5000x support
 
 v0.9.1
